--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0",
+    "mapbox-gl": "^2.15.0",
+    "react-map-gl": "^7.1.0"
   },
   "devDependencies": {
     "@babel/runtime": "^7.28.4",
