--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "mapbox-gl": "^2.15.0",
     "next": "^14.2.0",
+    "node-html-parser": "^7.0.1",
+    "puppeteer": "^24.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.1.0",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^4.4.0",
-    "mapbox-gl": "^2.15.0",
-    "react-map-gl": "^7.1.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@babel/runtime": "^7.28.4",
