--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.0.0",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
+    "country-flag-icons": "^1.5.21",
     "date-fns": "^3.0.0",
     "mapbox-gl": "^2.15.0",
     "next": "^14.2.0",
